Fix small spacing issue in workspace overview

--- a/gnome-shell/overview.css
+++ b/gnome-shell/overview.css
@@ -15,7 +15,7 @@
 }
 
 .workspace-thumbnails {
-    spacing: .85em;
+    spacing: .5em;
 }
 
 .workspace-thumbnail-indicator {
